// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> renders highlighted 1`] = `
<li
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <ButtonOrLink
    aria-expanded={false}
    aria-haspopup={false}
    className="item_12t53i1-o_O-item_highlighted_16ovkzb"
    role="menuitem"
    tabIndex={-1}
  >
    Foo
  </ButtonOrLink>
</li>
`;

exports[`<MenuItem /> renders spacious 1`] = `
<li
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <ButtonOrLink
    aria-expanded={false}
    aria-haspopup={false}
    className="item_12t53i1-o_O-item_spacious_1x0fg6n"
    role="menuitem"
    tabIndex={-1}
  >
    Foo
  </ButtonOrLink>
</li>
`;
